Increased the excecution q7 tests time